# UtkarshSrivastava_QuadBtech_Training

./: .pnp.cjs  Anchor.toml  README.md  WEEK3_DAY3  package-lock.json
DAY_1/: Readme.md
DAY_1/hello_rust/: Cargo.toml
DAY_1/hello_rust/src/: main.rs
DAY_1/src/DFX_Basicsfrontend/: index.html  package.json  vite.config.js
DAY_1/src/DFX_Basicsfrontend/src/: App.jsx  (+1 more)
DAY_2/: README.md  src
DAY_2/data_storage/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
DAY_3/: README.md
DAY_3/counter_canister/: Cargo.toml  README.md  dfx.json
DAY_4/: README.md
DAY_4/todo_app/: dfx.json  package-lock.json  package.json
DAY_5/: README.md
DAY_5/voting_system/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
WEEK1_DAY2/: README.md
WEEK2_DAY1/: README.md
WEEK2_DAY2/: README.md
WEEK2_DAY2/hello-world/: Cargo.toml
WEEK2_DAY2/hello-world/src/: lib.rs
WEEK2_DAY3/: README.md
WEEK2_DAY4/: README.md  SolanaToken.json  bosXXdyVqbt7oPq1uxb48gJKXYgrwhk1EcqDvUYeKYJ.json  mntnbo6eZ31ejG4uTEcF9oKGFx9ENXkb449VdADFupG.json
WEEK2_DAY5/: README.md
WEEK3_DAY1/: README.md
WEEK3_DAY1/CryptoFundS/: hardhat.config.js  package-lock.json
WEEK3_DAY1/CryptoFundS/cache/: solidity-files-cache.json
WEEK3_DAY1/CryptoFundS/contracts/: CryptoKids.sol
WEEK3_DAY1/CryptoFundS/scripts/: deploy.js
WEEK3_DAY1/CryptoFundS/test/: Cyrpto.test.js
WEEK3_DAY2/GasTracking/cache/: solidity-files-cache.json
WEEK3_DAY3/: README.md
WEEK3_DAY5/: README.md
WEEK4_DAY1/Aptos_Counter/: Move.toml
programs/hello-world/: Cargo.toml
tests/: hello-world.ts
(+70 files in other folders)
