[package]
name = "hello-world"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hello_world"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.0"
bytemuck_derive = "=1.7.0"

[programs.localnet]
hello_world = "Dt7VPZSi8DmFh5ACN816T1hPmBSdvVLCXq4jkkFgTsM3"


